# python-django-developer-project-52

./: .codeclimate.json  .codeclimate.yml  .gitattributes  .gitignore  Makefile  README.md  api_schema.yml  codeclimate.yml  docker-compose.yml  er_diagram.md  pyproject.toml  pytest.ini  setup.cfg  vendor.yml
.github/workflows/: pytest_with_postgres.yml  rollbar.yml
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/statuses/: forms.py  models.py  serializers.py  urls.py  views.py
task_manager/tasks/: filters.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
task_manager/templates/: base.html  index.html  login.html  service.html
task_manager/users/: forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
tests/: conftest.py  test_home_page.py  test_login_page.py  test_logout.py  test_user_create_page.py  test_user_delete_page.py  test_user_list_page.py  test_user_update_page.py  test_users_list_page.py
tests/drf/: conftest.py  factories.py  test_api_label.py  test_api_status.py  test_api_task.py  test_api_user.py
tests/fixtures/: test_labels_additional.py  test_labels_base.json  test_statuses_additional.py  test_statuses_base.json  test_tasks_additional.py  test_tasks_base.json  test_users.py  test_users_additional.json  test_users_base.json
tests/label/: conftest.py  test_label_create_page.py  test_label_delete_page.py  test_label_list_page.py  test_label_update_page.py
tests/status/: conftest.py  test_status_create_page.py  (+3 more)
(+40 files in other folders)
